# crypto-tracker

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  main.cpp
.github/workflows/: linux-cpp-gpp.yml
include/: .base_api.h.swp  base_api.h  base_db.h  binance_api.h  kucoin_api.h  log.h  manager.h  mongo_db.h  orders.h
src/: binance_api.cpp  kucoin_api.cpp  manager.cpp  mongo_db.cpp  orders.cpp
